k8s/currency-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8028
  selector:
    app: currency-service
